[package]
name = "lfrlock"
version = "0.1.3"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "A Lock-Free Read Lock where reads never block and writes are serialized using Mutex"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/lfrlock"
homepage = "https://github.com/ShaoG-R/lfrlock"
documentation = "https://docs.rs/lfrlock"
keywords = ["concurrency", "lock-free", "reader-writer", "mutex"]
categories = ["concurrency", "data-structures"]

[dependencies]
antidote = "1.0.0"
smr-swap = "0.7.1"

[dev-dependencies]
arc-swap = "1.7.1"
criterion = { version = "0.7", features = ["html_reports"] }

[features]
loom = ["smr-swap/loom"]

[[bench]]
name = "lock_benchmark"
harness = false
