[package]
name = "lfrlock"
version = "0.2.4"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "A Lock-Free Read Lock where reads never block and writes are serialized using Mutex"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/lfrlock"
homepage = "https://github.com/ShaoG-R/lfrlock"
documentation = "https://docs.rs/lfrlock"
keywords = ["concurrency", "lock-free", "reader-writer", "mutex"]
categories = ["concurrency", "data-structures"]

[dependencies]
smr-swap = { version = "0.8.7", default-features = false }
spin = { version = "0.10", optional = true }

[dev-dependencies]
arc-swap = "1.7.1"
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = ["std"]
std = ["smr-swap/std"]
spin = ["smr-swap/spin", "dep:spin"]
loom = ["smr-swap/loom"]

[[bench]]
name = "lock_benchmark"
harness = false
